# crewAI-project

./: README.md  pyproject.toml  report.md
src/crewai_project/: crew.py  main.py
src/crewai_project/config/: agents.yaml  tasks.yaml
